--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,7 @@ version: 0.1
 phases:
   install:
     commands:
+      - mkdir deploy
       - aws cloudformation package --template-file template.yaml --s3-bucket test-ci-scratch
                                    --output-template-file deploy/template.yaml
 artifacts:
