--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
   build:
     commands:
       - echo Building CloudFormation template package
-      - make package
+      - make build
 
 artifacts:
   files:
