Rename buildspec, add removal of SLS stack

--- a/buildspec_cicd.yml
+++ b/buildspec_cicd.yml
@@ -11,3 +11,4 @@ phases:
   post_build:
     commands:
       - HELLO_API_ENDPOINT="$(serverless info --stage ${TARGET_STAGE} -v | grep ServiceEndpoint | awk '{ print $2; }')" mocha
+      - serverless remove --stage ${TARGET_STAGE}
